--- a/src/step-4/back/role-play-backend/src/main/resources/application.properties
+++ b/src/step-4/back/role-play-backend/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/course_test
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:7777/studs
+spring.datasource.username=
+spring.datasource.password=
