Update: properties file

--- a/src/step-4/back/role-play-backend/src/main/resources/application.properties
+++ b/src/step-4/back/role-play-backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:7777/studs
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/course_test
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.servlet.multipart.max-file-size=24MB
+spring.servlet.multipart.max-request-size=24MB
