--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,14 +22,17 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "format": "npx prettier . --write"
+    "format": "npx prettier . --write",
+    "test": "jest"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "axios-mock-adapter": "^2.1.0",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -37,6 +41,8 @@
     "postcss": "^8.4.49",
     "prettier": "3.1.1",
     "tailwindcss": "^3.4.15",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "vite": "^6.0.1"
   }
