--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:21
 
 COPY role-play-backend/target/role-play-backend-3.0.1.jar role-play-backend-3.0.1.jar
 
-CMD ["java", "-jar", "my-app-3.0.1.jar"]
+CMD ["java", "-jar", "role-play-backend-3.0.1.jar"]
